--- a/anuncios.html
+++ b/anuncios.html
@@ -48,7 +48,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa de Lujo en el Lago</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">Contiene:</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -81,7 +81,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa terminados de lujo</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">Contiene:</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -114,7 +114,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio"></p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
